plugins/fluent-bit/integration/data/reference/tests/test_invalid_fluent-2dbit_plugin/step_00.ref
error: failed to setup Fluent Bit `please-do-not-crash` input plugin 
 --> <input>:1:12
  |
1 | fluent-bit please-do-not-crash
  |            ^^^^^^^^^^^^^^^^^^^ 
  |
  = note: error code `-1`